# confetti

./: .gitignore  CMakeLists.txt  README.md
examples/: linked_list_custom_sorting_function_example.c  linked_list_example.c  list_custom_sorting_function_example.c  list_example.c
src/: CMakeLists.txt  linked_list.c  list.c
src/cmake/: confettiConfig.cmake.in
src/include/: linked_list.h  list.h
